After AddBatches
