# src/routes/Batchroutes.js
@@ -1,0 +1,7 @@
+const express = require('express')
+const AddBatchControl=require('../controller/AddBatchController')
+const router = express.Router();
+
+router.post('/addnewbatch',AddBatchControl)
+
+module.exports = router;
